--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>BlogsApp</title>
-	<link rel="stylesheet" href="./public/style.css">
-	<script defer src="./public/bundle.js"></script>
+	<link rel="stylesheet" href="http://localhost:8080/public/style.css">
+	<script defer src="http://localhost:8080/public/bundle.js"></script>
 </head>
 <body>
 	<div id="app"></div>
